2007-03-02  Bob Weigel <rweigel@gmu.edu>

	* specfun/nchoosek.m: Fix nargin check.

2007-03-01  Daniel J Sebald  <daniel.sebald@ieee.org>

	* image/__img__.m: Don't set xlim and ylim properties.

2007-03-01  Paul Kienzle  <pkienzle@users.sf.net>

	* general/interp1.m: Fix *style cases for decreasing x.

2007-03-01  Muthiah Annamalai  <muthuspost@gmail.com>

	* polynomial/roots.m: Check nargin before accessing arg.

2007-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: If looking at image data, Don't
	increment data_idx unless using gnuplot for display.

2007-02-28  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/__uiobject_draw_axes__.m: Improve calculation of limits for
	plots with images.
	* image/image.m, image/imagesc.m, image/imshow.m:
	Deprecate zoom argument.

2007-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: Use fullfile to generate
	temporary file names.  Keep image and colormap file ids separate.

	* general/interp1.m: Correctly compute min and max values when
	values are decreasing and not evenly spaced.
	From Ricardo Marranita <ricardo.marranita@gmail.com>.

2007-02-27  John W. Eaton  <jwe@octave.org>

	* testfun/test.m (test): Handle possibility of file_in_loadpath
	returning an empty cell array.

2007-02-27  From Michael Goffioul  <michael.goffioul@swing.be>

	* pkg/pkg.m: Use fullfile to create filenames from parts.

2007-02-26  From Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in, audio/Makefile.in, control/Makefile.in,
	control/base/Makefile.in, control/hinf/Makefile.in,
	control/obsolete/Makefile.in, control/system/Makefile.in,
	control/util/Makefile.in, deprecated/Makefile.in,
	elfun/Makefile.in, finance/Makefile.in, general/Makefile.in,
	image/Makefile.in, io/Makefile.in, linear-algebra/Makefile.in,
	miscellaneous/Makefile.in, optimization/Makefile.in,
	path/Makefile.in, pkg/Makefile.in, plot/Makefile.in,
	polynomial/Makefile.in, quaternion/Makefile.in, set/Makefile.in,